# monorepo-starter-ds-dbx

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AI_RULES.md  CONTRIBUTING.md  README.md  SKILLS.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy_dev.yml  deploy_prod.yml
infra/terraform/: README.md
projects/customer_churn/: README.md  databricks.env.example  databricks.yml  pyproject.toml
projects/customer_churn/conf/: dev.yml
projects/customer_churn/notebooks/: 00_eda.py  20_lakeflow_features.py
projects/customer_churn/resources/: jobs.yml  permissions.yml  pipelines.yml
projects/customer_churn/src/customer_churn/: cli.py  config.py
projects/customer_churn/src/customer_churn/pipelines/: prep.py
projects/customer_churn/tests/unit/: test_config.py
tools/: dev.py  scaffold_project.py
tools/scripts/: bootstrap.ps1  bootstrap.sh
